tests/return/return.exp
Error ------------------------------------------------------------------------------------------ function_return.js:7:16

Cannot expect number as the return type of function because number [1] is incompatible with implicitly-returned
undefined. [incompatible-return]

   7| function f(x): number {
                     ^^^^^^ [1]


Error ------------------------------------------------------------------------------------------ function_return.js:23:3

Cannot return undefined because undefined [1] is incompatible with number [2]. [incompatible-return]

   function_return.js:23:3
   23|   return;
         ^^^^^^^ [1]

References:
   function_return.js:19:16
   19| function h(x): number {
                      ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------- implicit.js:6:22

Cannot expect number as the return type of async function because number [1] is incompatible with implicitly-returned
`Promise`. [incompatible-return]

   6| async function g1(): number {}
                           ^^^^^^ [1]


Error ------------------------------------------------------------------------------------------------- implicit.js:7:30

Cannot expect `Promise` as the return type of async function because number [1] is incompatible with implicitly-returned
undefined in type argument `R` [2]. [incompatible-return]

   implicit.js:7:30
     7| async function g2(): Promise<number> {}
                                     ^^^^^^ [1]

References:
   <BUILTINS>/core.js:667:24
   667| declare class Promise<+R> {
                               ^ [2]


Error ------------------------------------------------------------------------------------------ implicit_void.js:214:16

Cannot expect number as the return type of function because number [1] is incompatible with implicitly-returned
undefined. [incompatible-return]

   214| function g1(): number { // Error
                       ^^^^^^ [1]


Error ------------------------------------------------------------------------------------------ implicit_void.js:221:16

Cannot expect number as the return type of function because number [1] is incompatible with implicitly-returned
undefined. [incompatible-return]

   221| function g2(): number { // Error
                       ^^^^^^ [1]


Error ------------------------------------------------------------------------------------------ implicit_void.js:229:16

Cannot expect number as the return type of function because number [1] is incompatible with implicitly-returned
undefined. [incompatible-return]

   229| function g3(): number { // Error
                       ^^^^^^ [1]


Error ------------------------------------------------------------------------------------------ implicit_void.js:237:16

Cannot expect number as the return type of function because number [1] is incompatible with implicitly-returned
undefined. [incompatible-return]

   237| function g4(): number { // Error
                       ^^^^^^ [1]


Error ------------------------------------------------------------------------------------------ implicit_void.js:245:16

Cannot expect number as the return type of function because number [1] is incompatible with implicitly-returned
undefined. [incompatible-return]

   245| function g5(): number { // Error
                       ^^^^^^ [1]


Error ------------------------------------------------------------------------------------------ implicit_void.js:254:16

Cannot expect number as the return type of function because number [1] is incompatible with implicitly-returned
undefined. [incompatible-return]

   254| function g6(): number { // Error
                       ^^^^^^ [1]


Error ------------------------------------------------------------------------------------------ implicit_void.js:262:16

Cannot expect number as the return type of function because number [1] is incompatible with implicitly-returned
undefined. [incompatible-return]

   262| function g7(): number { // Error
                       ^^^^^^ [1]


Error ------------------------------------------------------------------------------------------ implicit_void.js:275:16

Cannot expect number as the return type of function because number [1] is incompatible with implicitly-returned
undefined. [incompatible-return]

   275| function g8(): number { // Error
                       ^^^^^^ [1]


Error ------------------------------------------------------------------------------------------ implicit_void.js:288:16

Cannot expect number as the return type of function because number [1] is incompatible with implicitly-returned
undefined. [incompatible-return]

   288| function g9(): number { // Error
                       ^^^^^^ [1]


Error ------------------------------------------------------------------------------------------ implicit_void.js:303:17

Cannot expect number as the return type of function because number [1] is incompatible with implicitly-returned
undefined. [incompatible-return]

   303| function g10(): number { // Error
                        ^^^^^^ [1]


Error ------------------------------------------------------------------------------------------ implicit_void.js:309:17

Cannot expect number as the return type of function because number [1] is incompatible with implicitly-returned
undefined. [incompatible-return]

   309| function g11(): number { // Error
                        ^^^^^^ [1]


Error ------------------------------------------------------------------------------------------ implicit_void.js:316:17

Cannot expect number as the return type of function because number [1] is incompatible with implicitly-returned
undefined. [incompatible-return]

   316| function g12(): number { // Error
                        ^^^^^^ [1]


Error ------------------------------------------------------------------------------------------ implicit_void.js:332:17

Cannot expect number as the return type of function because number [1] is incompatible with implicitly-returned
undefined. [incompatible-return]

   332| function g13(): number { // Error
                        ^^^^^^ [1]


Error ------------------------------------------------------------------------------------------ implicit_void.js:337:17

Cannot expect number as the return type of function because number [1] is incompatible with implicitly-returned
undefined. [incompatible-return]

   337| function g14(): number { // Error
                        ^^^^^^ [1]


Error ------------------------------------------------------------------------------------------ implicit_void.js:344:17

Cannot expect number as the return type of function because number [1] is incompatible with implicitly-returned
undefined. [incompatible-return]

   344| function g15(): number { // Error
                        ^^^^^^ [1]


Error ------------------------------------------------------------------------------------------ implicit_void.js:351:17

Cannot expect number as the return type of function because number [1] is incompatible with implicitly-returned
undefined. [incompatible-return]

   351| function g16(): number { // Error
                        ^^^^^^ [1]


Error ------------------------------------------------------------------------------------------ implicit_void.js:358:26

Cannot expect number as the return type of function because number [1] is incompatible with implicitly-returned
undefined. [incompatible-return]

   358| function g17(x: Object): number { // Error
                                 ^^^^^^ [1]


Error ----------------------------------------------------------------------------------------------------- void.js:12:2

Cannot cast `f(...)` to undefined because string [1] is incompatible with undefined [2]. [incompatible-cast]

   void.js:12:2
   12| (f(true): void); // error: string ~> void
        ^^^^^^^

References:
   void.js:8:12
    8|     return "nope";
                  ^^^^^^ [1]
   void.js:12:11
   12| (f(true): void); // error: string ~> void
                 ^^^^ [2]



Found 22 errors
